[gd_scene load_steps=3 format=3 uid="uid://d0od6saaado2c"]

[ext_resource type="Texture2D" uid="uid://ctsixx6r60ulw" path="res://assets/icon/expand_arrow_16.png" id="1_5rgkn"]
[ext_resource type="Script" path="res://src/modules/local_video/video/video_item_tab.gd" id="1_yl6jf"]

[node name="VideoItemTab" type="PopupPanel"]
transparent_bg = true
size = Vector2i(120, 226)
visible = true
transparent = true
theme_type_variation = &"TabVideoItemPanel"
script = ExtResource("1_yl6jf")

[node name="FunctionMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 118.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="V" type="VBoxContainer" parent="FunctionMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlayButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "播放"

[node name="HSeparator" type="HSeparator" parent="FunctionMargin/V"]
layout_mode = 2

[node name="OpenLocationButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "打开位置"
icon_alignment = 2
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="FunctionMargin/V/OpenLocationButton"]
modulate = Color(0.675781, 0.675781, 0.675781, 1)
custom_minimum_size = Vector2(14, 14)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_5rgkn")
expand_mode = 1
stretch_mode = 5

[node name="ReplaceCoverButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "更换封面"

[node name="SetPictureButton2" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
disabled = true
text = "添加标记"

[node name="TextureRect" type="TextureRect" parent="FunctionMargin/V/SetPictureButton2"]
modulate = Color(0.675781, 0.675781, 0.675781, 1)
custom_minimum_size = Vector2(14, 14)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_5rgkn")
expand_mode = 1
stretch_mode = 5

[node name="ExpandFunctionButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "扩展功能"

[node name="TextureRect" type="TextureRect" parent="FunctionMargin/V/ExpandFunctionButton"]
modulate = Color(0.675781, 0.675781, 0.675781, 1)
custom_minimum_size = Vector2(14, 14)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_5rgkn")
expand_mode = 1
stretch_mode = 5

[node name="HSeparator2" type="HSeparator" parent="FunctionMargin/V"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "删除信息"

[node name="SetPictureButton4" type="Button" parent="FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
disabled = true
text = "删除文件"

[node name="OpenLocationTabPanel" type="PopupPanel" parent="."]
transparent_bg = true
transparent = true
theme_type_variation = &"TabVideoItemPanel"

[node name="FunctionMargin" type="MarginContainer" parent="OpenLocationTabPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 98.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="V" type="VBoxContainer" parent="OpenLocationTabPanel/FunctionMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="OpenVideoButton" type="Button" parent="OpenLocationTabPanel/FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "影片"

[node name="OpenPosterButton" type="Button" parent="OpenLocationTabPanel/FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "海报图"

[node name="OpenPreviewButton" type="Button" parent="OpenLocationTabPanel/FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "预览图"

[node name="ExpandFunctionTabPanel" type="PopupPanel" parent="."]
auto_translate_mode = 1
transparent_bg = true
size = Vector2i(100, 40)
transparent = true
theme_type_variation = &"TabVideoItemPanel"

[node name="FunctionMargin" type="MarginContainer" parent="ExpandFunctionTabPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 98.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="V" type="VBoxContainer" parent="ExpandFunctionTabPanel/FunctionMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GenerateScreenshotButton" type="Button" parent="ExpandFunctionTabPanel/FunctionMargin/V"]
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "生成截图"

[node name="OpenPosterButton" type="Button" parent="ExpandFunctionTabPanel/FunctionMargin/V"]
visible = false
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "海报图"

[node name="OpenPreviewButton" type="Button" parent="ExpandFunctionTabPanel/FunctionMargin/V"]
visible = false
layout_mode = 2
theme_type_variation = &"TabVideoButton"
text = "预览图"
